samples/_failures_safe/1761708897_1950cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a4819100.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_a4819100.c:185:23: error: expected declaration or statement at end of input
  185 | void graph_bfs(struct Graph* graph, int start_id) {
      |                       ^~~~~
